<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true"
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key" />


    <ListPreference
        android:summary="%s"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:dialogTitle="@string/pref_units_label"
        android:entries="@array/listEntries"
        android:entryValues="@array/listValues"
        android:defaultValue="@string/pref_units_default" />
        />
</PreferenceScreen>